--- a/src/resource.qrc
+++ b/src/resource.qrc
@@ -4,6 +4,8 @@
         <file>../Images/0-Categorie/clipboard.svg</file>
         <file>../Images/0-Categorie/envelope.svg</file>
         <file>../Images/0-Categorie/globe-africa.svg</file>
+        <file>../Images/0-Categorie/All_docs.svg</file>
+        <file>../Images/0-Categorie/All_docs-color.svg</file>
         <file>../Images/1-NavigateurWeb/arrow-left.svg</file>
         <file>../Images/1-NavigateurWeb/arrow-right.svg</file>
         <file>../Images/1-NavigateurWeb/home.svg</file>
@@ -26,6 +28,10 @@
         <file>../Images/3-PriseDeNotes/pen.svg</file>
         <file>../Images/3-PriseDeNotes/plus-square.svg</file>
         <file>../Images/3-PriseDeNotes/print.svg</file>
+        <file>../Images/3-PriseDeNotes/Docs.svg</file>
+        <file>../Images/3-PriseDeNotes/Sheets.svg</file>
+        <file>../Images/3-PriseDeNotes/Slides.svg</file>
+        <file>../Images/3-PriseDeNotes/Forms.svg</file>
         <file>../Images/4-Courriel/envelope-open-text.svg</file>
         <file>../Images/4-Courriel/envelope-open.svg</file>
         <file>../Images/4-Courriel/envelope.svg</file>
@@ -73,6 +79,7 @@
         <file>../Images/5-music/Jamendo.svg</file>
         <file>../Images/5-music/SoundCloud.svg</file>
         <file>../Images/5-music/YouTube.svg</file>
+        <file>../Images/5-music/Spotify.svg</file>
         <file>../Images/logo.svg</file>
         <file>../src/heficience-menu.desktop</file>
     </qresource>
